vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__process_statement_full.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nprocess (all) is\n  variable foo : boolean;\nbegin\n  foo <= true;\n  wait;\nend process;\",)"
---
ProcessStatement
  ProcessPreamble
    Keyword(Process)
    ParenthesizedProcessSensitivityList
      LeftPar
      AllSensitivityList
        Keyword(All)
      RightPar
    Keyword(Is)
  ProcessDeclarativePart
    VariableDeclaration
      Keyword(Variable)
      IdentifierList
        Identifier 'foo'
      Colon
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'boolean'
      SemiColon
  DeclarationStatementSeparator
    Keyword(Begin)
  ProcessStatementPart
    SimpleWaveformAssignment
      NameTarget
        Name
          NameDesignatorPrefix
            Identifier 'foo'
      LTE
      WaveformElements
        WaveformElement
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'true'
      SemiColon
    WaitStatement
      Keyword(Wait)
      SemiColon
  ProcessEpilogue
    Keyword(End)
    Keyword(Process)
    SemiColon
