vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__process_statement_sensitivity.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nprocess (clk, vec(1)) is\nbegin\nend process;\",)"
---
ProcessStatement
  ProcessStatementPreamble
    Keyword(Process)
    ParenthesizedProcessSensitivityList
      LeftPar
      NameList
        Name
          Identifier 'clk'
        Comma
        Name
          Identifier 'vec'
          RawTokens
            LeftPar
            AbstractLiteral '1'
            RightPar
      RightPar
    Keyword(Is)
  Keyword(Begin)
  ProcessStatementEpilogue
    Keyword(End)
    Keyword(Process)
    SemiColon
