vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__process_statement_variant.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nname : process is\nbegin\nend process name;\",)"
---
ProcessStatement
  ProcessStatementPreamble
    Label
      Identifier 'name'
      Colon
    Keyword(Process)
    Keyword(Is)
  Keyword(Begin)
  ProcessStatementEpilogue
    Keyword(End)
    Keyword(Process)
    Identifier 'name'
    SemiColon
